# doc_parser_project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
uploads/: modified_1d4ddf30-181c-40ca-8dea-32a5b22bed77.docx
